--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Bot",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "NODE_ENV=development node bot.js"
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.17"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.5",
     "pino": "^8.21.0",
